stable/application-mesh/tests/golden/standard-configurations/disabled.values.yaml
global:
  application:
    product: leads-broker
    environment: test
    version: "0.0.0"

enabled: false
