stable/application-mesh/tests/golden/standard-configurations/single-webserver.values.yaml
global:
  application:
    product: leads-broker
    environment: test
    version: "release-2023-08-30-02"

  applicationMonitoring:
    datadog: true

destinations:
  - component: webserver

ingress:
  - host: leads-broker-st2.matic.com
    gateway: wildcard-matic-com
    destination: webserver
    deny_locations:
      - /admin
  - host: leads-broker-st2.matic.link
    gateway: wildcard-matic-link
    destination: webserver

egress:
  enabled: true
  allowlist:
    - name: db
      type: postgres
      host: leads-broker-staging.aws.db
    - full_name: datalot
      type: https
      host: datalot.com
