stable/application-mesh/tests/golden/standard-configurations/single-webserver.golden.yaml
---
# Source: application-mesh/templates/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: best-product-webserver
  labels:
    app.kubernetes.io/part-of: best-product
    app.kubernetes.io/version: "release-2023-08-30-02"
spec:
  host: best-product-webserver.app-component-test00000.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
  subsets:
    - name: all-versions # Route traffic to all pods regardless of the deployed version. Current deployment model.
      labels:
        app.kubernetes.io/instance: best-product-webserver
    - name: current-version # Should be used for proper blue-green deployment procedures
      labels:
        app.kubernetes.io/instance: best-product-webserver
        app.kubernetes.io/version: "release-2023-08-30-02"
---
# Source: application-mesh/templates/egress-destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: istio-egress-gateway-disable-mtls
spec:
  host: istio-egress-gateway.istio-ingress.svc.cluster.local
  exportTo: [".", "istio-ingress"]
  trafficPolicy:
    tls:
      mode: DISABLE
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egress-best-product-db
spec:
  selector:
    istio: egress-gateway
  servers:
    - port:
        number: 5432
        name: tls
        protocol: TLS
      hosts:
      - best-product-staging.aws.db
      tls:
        mode: PASSTHROUGH
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egress-datagotix
spec:
  selector:
    istio: egress-gateway
  servers:
    - port:
        number: 443
        name: tls
        protocol: TLS
      hosts:
      - datagotix.com
      tls:
        mode: PASSTHROUGH
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: egress-best-product-db
spec:
  exportTo: [".", "istio-ingress"]
  hosts:
    - best-product-staging.aws.db
  ports:
    - name: postgres
      number: 5432
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: DNS
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: egress-datagotix
spec:
  exportTo: [".", "istio-ingress"]
  hosts:
    - datagotix.com
  ports:
    - name: https
      number: 443
      protocol: TLS
  location: MESH_EXTERNAL
  resolution: DNS
---
# Source: application-mesh/templates/egress-sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: best-product-webserver
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: best-product
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
  - hosts:
    - istio-ingress/*
    - istio-system/*
    - "./*"
    - "./best-product-staging.aws.db"
    - "./datagotix.com"
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egress-best-product-db
spec:
  exportTo: [".", "istio-ingress"]
  hosts:
    - best-product-staging.aws.db
  gateways:
    - mesh
    - egress-best-product-db
  tls:
    - match:
        - gateways:
            - mesh
          sourceLabels:
            app.kubernetes.io/name: best-product
          port: 5432
          sniHosts:
            - best-product-staging.aws.db
      route:
        - destination:
            host: istio-egress-gateway.istio-ingress.svc.cluster.local
            port:
              number: 5432
          weight: 100
    - match:
        - gateways:
            - egress-best-product-db
          port: 443
          sniHosts:
            - best-product-staging.aws.db
      route:
        - destination:
            host: best-product-staging.aws.db
            port:
              number: 5432
          weight: 100
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egress-datagotix
spec:
  exportTo: [".", "istio-ingress"]
  hosts:
    - datagotix.com
  gateways:
    - mesh
    - egress-datagotix
  tls:
    - match:
        - gateways:
            - mesh
          sourceLabels:
            app.kubernetes.io/name: best-product
          port: 443
          sniHosts:
            - datagotix.com
      route:
        - destination:
            host: istio-egress-gateway.istio-ingress.svc.cluster.local
            port:
              number: 443
          weight: 100
    - match:
        - gateways:
            - egress-datagotix
          port: 443
          sniHosts:
            - datagotix.com
      route:
        - destination:
            host: datagotix.com
            port:
              number: 443
          weight: 100
---
# Source: application-mesh/templates/virtual-service.gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: best-product-9c010aaa
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "best-product-st2.example.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/part-of: best-product
    app.kubernetes.io/version: "release-2023-08-30-02"
spec:
  hosts:
    - "best-product-st2.example.com"
  gateways:
    - istio-ingress/wildcard-example-com
  http:
    - name: deny-ingress-spec
      match:
        - uri:
            prefix: /admin
      directResponse:
        status: 403
        body:
          string: Access Denied
    - name: allow-all-locations
      route:
        - destination:
            host: "best-product-webserver.app-component-test00000.svc.cluster.local"
            subset: all-versions
          headers:
            request:
              add:
                "x-request-start": "t=%START_TIME(%s.%3f)%"
---
# Source: application-mesh/templates/virtual-service.gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: best-product-a72a0b19
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "best-product-st2.example.link"
    external-dns.alpha.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/part-of: best-product
    app.kubernetes.io/version: "release-2023-08-30-02"
spec:
  hosts:
    - "best-product-st2.example.link"
  gateways:
    - istio-ingress/wildcard-matic-link
  http:
    - name: allow-all-locations
      route:
        - destination:
            host: "best-product-webserver.app-component-test00000.svc.cluster.local"
            subset: all-versions
          headers:
            request:
              add:
                "x-request-start": "t=%START_TIME(%s.%3f)%"
---
# Source: application-mesh/templates/virtual-service.mesh.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: best-product-webserver
  labels:
    app.kubernetes.io/part-of: best-product
    app.kubernetes.io/version: "release-2023-08-30-02"
spec:
  hosts:
    - "best-product-webserver.app-component-test00000.svc.cluster.local"
  gateways:
    - mesh
  http:
    - name: allow-all-locations
      route:
        - destination:
            host: "best-product-webserver.app-component-test00000.svc.cluster.local"
            subset: all-versions
          headers:
            request:
              add:
                "x-request-start": "t=%START_TIME(%s.%3f)%"
