stable/application-mesh/tests/golden/standard-configurations/webserver-and-websockets.values.yaml
global:
  application:
    product: leads-broker
    environment: test
    version: "release-2023-08-30-01"

  applicationMonitoring:
    datadog: true

destinations:
  - component: webserver
  - component: websockets

ingress:
  - host: api-abc.example.com
    gateway: private-example-com
    destination: webserver
    additional_hosts: ["admin.example.com", "broker.example.com"]
    deny_locations:
      - /uploads/document
  - host: abc-hooks.example.com
    gateway: public-example-com
    destination: webserver
    additional_hosts: ["service1.example.com", "service2.example.com"]
    allow_locations:
      - /api/test1
      - /scim/v2/test2
      - /api/service/envelope
  - host: ws-srv.example.com
    gateway: private-example-com
    destination: websockets

egress:
  enabled: true
  internal_allowlist:
    - other-product-webserver.abc-mesh.svc.cluster.local
  allowlist:
    - name: db
      type: postgres
      host: abc-staging.aws.db
    - name: redis
      type: redis
      host: abc-staging.aws.redis
    - full_name: abc-120
      type: https
      hosts:
        - api.openai.com
        - api.slack.com
