stable/application-mesh/tests/golden/standard-configurations/webserver-and-websockets.golden.yaml
---
# Source: application-mesh/templates/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: leads-broker-webserver
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "release-2023-08-30-01"
spec:
  host: leads-broker-webserver.app-component-test00000.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
  subsets:
    - name: all-versions # Route traffic to all pods regardless of the deployed version. Current deployment model.
      labels:
        app.kubernetes.io/instance: leads-broker-webserver
    - name: current-version # Should be used for proper blue-green deployment procedures
      labels:
        app.kubernetes.io/instance: leads-broker-webserver
        app.kubernetes.io/version: "release-2023-08-30-01"
---
# Source: application-mesh/templates/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: leads-broker-websockets
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "release-2023-08-30-01"
spec:
  host: leads-broker-websockets.app-component-test00000.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
  subsets:
    - name: all-versions # Route traffic to all pods regardless of the deployed version. Current deployment model.
      labels:
        app.kubernetes.io/instance: leads-broker-websockets
    - name: current-version # Should be used for proper blue-green deployment procedures
      labels:
        app.kubernetes.io/instance: leads-broker-websockets
        app.kubernetes.io/version: "release-2023-08-30-01"
---
# Source: application-mesh/templates/egress-destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: istio-egress-gateway-disable-mtls
spec:
  host: istio-egress-gateway.istio-ingress.svc.cluster.local
  exportTo: [".", "istio-ingress"]
  trafficPolicy:
    tls:
      mode: DISABLE
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egress-leads-broker-db
spec:
  selector:
    istio: egress-gateway
  servers:
    - port:
        number: 5432
        name: tls
        protocol: TLS
      hosts:
      - abc-staging.aws.db
      tls:
        mode: PASSTHROUGH
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egress-leads-broker-redis
spec:
  selector:
    istio: egress-gateway
  servers:
    - port:
        number: 6379
        name: tls
        protocol: TLS
      hosts:
      - abc-staging.aws.redis
      tls:
        mode: PASSTHROUGH
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egress-abc-120
spec:
  selector:
    istio: egress-gateway
  servers:
    - port:
        number: 443
        name: tls
        protocol: TLS
      hosts:
      - api.openai.com
      - api.slack.com
      tls:
        mode: PASSTHROUGH
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: egress-leads-broker-db
spec:
  exportTo: [".", "istio-ingress"]
  hosts:
    - abc-staging.aws.db
  ports:
    - name: postgres
      number: 5432
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: DNS
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: egress-leads-broker-redis
spec:
  exportTo: [".", "istio-ingress"]
  hosts:
    - abc-staging.aws.redis
  ports:
    - name: redis
      number: 6379
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: DNS
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: egress-abc-120
spec:
  exportTo: [".", "istio-ingress"]
  hosts:
    - api.openai.com
    - api.slack.com
  ports:
    - name: https
      number: 443
      protocol: TLS
  location: MESH_EXTERNAL
  resolution: DNS
---
# Source: application-mesh/templates/egress-sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: leads-broker-webserver
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: leads-broker
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
  - hosts:
    - istio-ingress/*
    - istio-system/*
    - "./*"
    - "./abc-staging.aws.db"
    - "./abc-staging.aws.redis"
    - "./api.openai.com"
    - "./api.slack.com"
---
# Source: application-mesh/templates/egress-sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: leads-broker-websockets
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: leads-broker
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
  - hosts:
    - istio-ingress/*
    - istio-system/*
    - "./*"
    - "./abc-staging.aws.db"
    - "./abc-staging.aws.redis"
    - "./api.openai.com"
    - "./api.slack.com"
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egress-leads-broker-db
spec:
  exportTo: [".", "istio-ingress"]
  hosts:
    - abc-staging.aws.db
  gateways:
    - mesh
    - egress-leads-broker-db
  tls:
    - match:
        - gateways:
            - mesh
          sourceLabels:
            app.kubernetes.io/name: leads-broker
          port: 5432
          sniHosts:
            - abc-staging.aws.db
      route:
        - destination:
            host: istio-egress-gateway.istio-ingress.svc.cluster.local
            port:
              number: 5432
          weight: 100
    - match:
        - gateways:
            - egress-leads-broker-db
          port: 443
          sniHosts:
            - abc-staging.aws.db
      route:
        - destination:
            host: abc-staging.aws.db
            port:
              number: 5432
          weight: 100
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egress-leads-broker-redis
spec:
  exportTo: [".", "istio-ingress"]
  hosts:
    - abc-staging.aws.redis
  gateways:
    - mesh
    - egress-leads-broker-redis
  tls:
    - match:
        - gateways:
            - mesh
          sourceLabels:
            app.kubernetes.io/name: leads-broker
          port: 6379
          sniHosts:
            - abc-staging.aws.redis
      route:
        - destination:
            host: istio-egress-gateway.istio-ingress.svc.cluster.local
            port:
              number: 6379
          weight: 100
    - match:
        - gateways:
            - egress-leads-broker-redis
          port: 443
          sniHosts:
            - abc-staging.aws.redis
      route:
        - destination:
            host: abc-staging.aws.redis
            port:
              number: 6379
          weight: 100
---
# Source: application-mesh/templates/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egress-abc-120
spec:
  exportTo: [".", "istio-ingress"]
  hosts:
    - api.openai.com
    - api.slack.com
  gateways:
    - mesh
    - egress-abc-120
  tls:
    - match:
        - gateways:
            - mesh
          sourceLabels:
            app.kubernetes.io/name: leads-broker
          port: 443
          sniHosts:
            - api.openai.com
            - api.slack.com
      route:
        - destination:
            host: istio-egress-gateway.istio-ingress.svc.cluster.local
            port:
              number: 443
          weight: 100
    - match:
        - gateways:
            - egress-abc-120
          port: 443
          sniHosts:
            - api.openai.com
            - api.slack.com
      route:
        - destination:
            host: api.openai.com
            port:
              number: 443
        - destination:
            host: api.slack.com
            port:
              number: 443
          weight: 100
---
# Source: application-mesh/templates/virtual-service.gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leads-broker-45be0715
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "admin.example.com, broker.example.com, api-abc.example.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "release-2023-08-30-01"
spec:
  hosts:
    - "admin.example.com"
    - "broker.example.com"
    - "api-abc.example.com"
  gateways:
    - istio-ingress/private-example-com
  http:
    - name: deny-ingress-spec
      match:
        - uri:
            prefix: /uploads/document
      directResponse:
        status: 403
        body:
          string: Access Denied
    - name: allow-all-locations
      route:
        - destination:
            host: "leads-broker-webserver.app-component-test00000.svc.cluster.local"
            subset: all-versions
          headers:
            request:
              add:
                "x-request-start": "t=%START_TIME(%s.%3f)%"
---
# Source: application-mesh/templates/virtual-service.gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leads-broker-56fc07ff
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "service1.example.com, service2.example.com, abc-hooks.example.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "release-2023-08-30-01"
spec:
  hosts:
    - "service1.example.com"
    - "service2.example.com"
    - "abc-hooks.example.com"
  gateways:
    - istio-ingress/public-example-com
  http:
    - name: allow-ingress-spec
      match:
        - uri:
            prefix: /api/test1
        - uri:
            prefix: /scim/v2/test2
        - uri:
            prefix: /api/service/envelope
      route:
        - destination:
            host: "leads-broker-webserver.app-component-test00000.svc.cluster.local"
            subset: all-versions
          headers:
            request:
              add:
                "x-request-start": "t=%START_TIME(%s.%3f)%"
    - name: deny-everything-except-allowed
      directResponse:
        status: 403
        body:
          string: Access Denied
---
# Source: application-mesh/templates/virtual-service.gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leads-broker-429706fa
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "ws-srv.example.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "release-2023-08-30-01"
spec:
  hosts:
    - "ws-srv.example.com"
  gateways:
    - istio-ingress/private-example-com
  http:
    - name: allow-all-locations
      route:
        - destination:
            host: "leads-broker-websockets.app-component-test00000.svc.cluster.local"
            subset: all-versions
          headers:
            request:
              add:
                "x-request-start": "t=%START_TIME(%s.%3f)%"
---
# Source: application-mesh/templates/virtual-service.mesh.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leads-broker-webserver
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "release-2023-08-30-01"
spec:
  hosts:
    - "leads-broker-webserver.app-component-test00000.svc.cluster.local"
  gateways:
    - mesh
  http:
    - name: allow-all-locations
      route:
        - destination:
            host: "leads-broker-webserver.app-component-test00000.svc.cluster.local"
            subset: all-versions
          headers:
            request:
              add:
                "x-request-start": "t=%START_TIME(%s.%3f)%"
---
# Source: application-mesh/templates/virtual-service.mesh.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leads-broker-websockets
  labels:
    app.kubernetes.io/part-of: leads-broker
    app.kubernetes.io/version: "release-2023-08-30-01"
spec:
  hosts:
    - "leads-broker-websockets.app-component-test00000.svc.cluster.local"
  gateways:
    - mesh
  http:
    - name: allow-all-locations
      route:
        - destination:
            host: "leads-broker-websockets.app-component-test00000.svc.cluster.local"
            subset: all-versions
          headers:
            request:
              add:
                "x-request-start": "t=%START_TIME(%s.%3f)%"
